# pc-remotemanager-client

./: .gitignore  Cargo.toml  config.example.toml
.github/workflows/: build-windows.yml
src/: command_handler.rs  main.rs  ws_client.rs
src/command_handler/: handlers.rs
src/command_handler/handlers/: keysimulator.rs  runcmd.rs  shutdown.rs
