[package]
name = "pc-remotemanager-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
url = "2.4"
winapi = { version = "0.3", features = ["winuser", "processthreadsapi"] }
