[package]
name = "pc-remotemanager-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pc-remotemanager-client"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.4"
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "winbase"] }
enigo = "0.3.0"
toml = "0.8"